<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- main -->
    <string name="app_name">Dial Prefixer</string>
    <string name="action_add_rule">Add Rule</string>
    <string name="action_reload_defaults">Reload Default Rules</string>
    <string name="action_rewrite_calllog">Rewrite CallLog</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- about -->
    <string name="activity_about_title">About</string>
    <string name="about_version_title">Version:</string>
    <string name="about_changelog_title">Changes:</string>
    <string name="about_copyright">Copyright(R) 2013 reczcgo All rights reserved.</string>

    <!-- rule edit -->
	<string name="activity_rule_edit_title">Rule Edit</string>
	<string name="action_save_rule">Save</string>
	<string name="action_cancel_rule">Cancel</string>
	<string name="enable_title">Enable</string>
	<string name="name_title">Name</string>
	<string name="name_hint">Optional</string>
	<string name="action_title">Action</string>
	<string name="continue_title">Continue</string>
	<string name="pattern_title">Pattern</string>
	<string name="pattern_hint">Regex Pattern</string>
	<string name="negate_title">Negate</string>
	<string name="replacement_title">Replacement</string>
	<string name="replacement_hint">Regex Replacement</string>
	<string name="rule_action_check">Check</string>
	<string name="rule_action_rewrite">Rewrite</string>
	
    <!-- preferences -->
    <string name="activity_preference_title">Settings</string>
	<string name="pref_category_dial_prefix">Dial Prefix</string>
	<string name="prefs_enable_add_prefix">Enable Add Prefix</string>
	<string name="prefs_prefixA">Prefix A(%pA)</string>
	<string name="prefs_prefixB">Prefix B(%pB)</string>
	<string name="prefs_prefixC">Prefix C(%pC)</string>
	<string name="prefs_prefixA_dialog">Prefix A</string>
	<string name="prefs_prefixB_dialog">Prefix B</string>
	<string name="prefs_prefixC_dialog">Prefix C</string>
	<string name="prefs_prefixA_hint">Number of dial prefix A</string>
	<string name="prefs_prefixB_hint">Number of dial prefix B</string>
	<string name="prefs_prefixC_hint">Number of dial prefix C</string>
	<string name="default_prefixA">0063</string>
	<string name="default_prefixB">003768</string>
	<string name="default_prefixC"></string>
	<string name="prefs_nosend_callerid">No Send Caller ID(%d)</string>
	<string name="prefs_nosend_callerid_dialog">Prefix for no send Caller ID notification</string>
	<string name="prefs_nosend_callerid_hint">Prefix for no send Caller ID notification</string>
	<string name="default_nosend_callerid">184</string>
	<string name="prefs_send_callerid">Send Caller ID(%r)</string>
	<string name="prefs_send_callerid_dialog">Prefix for send Caller ID notification</string>
	<string name="prefs_send_callerid_hint">Prefix for send Caller ID notification</string>
	<string name="default_send_callerid">186</string>
	<string name="pref_category_calllog">Call Log</string>
	<string name="prefs_calllog_deleteprefix">Delete Prefix</string>
	<string name="pref_category_ui">User Interface</string>
	<string name="prefs_ui_confirmnumber">Confirm Number</string>
	<string name="prefs_ui_displaynumber">Display Number</string>

	<!-- rule list item -->
	<string name="action_icon">action icon</string>
	<string name="rule_item_summary">rule summary</string>
	<string name="drag_handle">drag handle</string>

	<!-- rule list context menu -->
	<string name="action_edit_rule">Edit Rule</string>
	<string name="action_toggle_enable_rule">Toggle Enable/Disable</string>
	<string name="action_clone_rule">Clone Rule</string>
	<string name="action_delete_rule">Delete Rule</string>

</resources>
