<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RuleEditFragment" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

<!--    Name
 -->

        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
				android:id="@+id/name_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/name_title" />

            <EditText
                android:id="@+id/name_value"
                android:hint="@string/name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

		</LinearLayout>

<!-- 	Action
 -->

        <LinearLayout
            android:id="@+id/action_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/action_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_title" />

            <Spinner
                android:id="@+id/action_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                />
        </LinearLayout>

<!--    Continue
 -->

        <LinearLayout
            android:id="@+id/continue_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
				android:id="@+id/continue_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/continue_title" />

            <CheckBox
                android:id="@+id/continue_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

		</LinearLayout>

<!--    Pattern
 -->

        <LinearLayout
            android:id="@+id/pattern_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
				android:id="@+id/pattern_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/pattern_title" />

            <EditText
                android:id="@+id/pattern_value"
                android:hint="@string/pattern_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

		</LinearLayout>

<!--    Negate
 -->

        <LinearLayout
            android:id="@+id/negate_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
				android:id="@+id/negate_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/negate_title" />

            <CheckBox
                android:id="@+id/negate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

		</LinearLayout>
    </LinearLayout>

</ScrollView>