<?xml version="1.0" encoding="utf-8"?>
<jp.meridiani.apps.dialprefixer.DragDropListItem
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:meridiani="http://schemas.meridiani.jp/apk/res/meridiani"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    meridiani:actionIconItem="@+id/action_icon"
    meridiani:dragHandleItem="@+id/drag_handle"
    >

    <ImageView
        android:id="@+id/action_icon"
        android:tag="action_icon"
        android:src="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/action_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        />

    <TextView
        android:id="@+id/rule_item_summary"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:text="@string/rule_item_summary"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/drag_handle"
        android:src="@android:drawable/ic_menu_sort_by_size"
        android:tag="drag_handle" />

</jp.meridiani.apps.dialprefixer.DragDropListItem>
